--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<li>Add a custom stylesheet that adjusts the default Bootstrap grid so that it becomes a more practical starting point for designing modern-looking web pages.</li>
 
-		<li>Update the background colours of Broostrap grid elements, and add images to grid rows and columns.</li>
+		<li>Update the background colours of Bootstrap grid elements, and add images to grid rows and columns.</li>
 	</ul>
 
 
@@ -117,16 +117,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<div class="container-flexbox">
 		<div class="item-3">
-			<img src="assets/img/intro-bootstrap-practical/bambam-700x400.jpg"  alt="Project: Smooth Smoothies">
+			<img src="assets/img/intro-bootstrap-practical/bambam-700x400.jpg"  alt="Project: Smooth Smoothies" style="margin-bottom:12px">
+			<a href="https://2n2l.com/it4women/exercises/assets/img/intro-bootstrap-practical/bambam-700x400.jpg" target="_blank">Link</a>
 		</div>
 		<div class="item-3">
-			<img src="assets/img/intro-bootstrap-practical/bambam-700x450.jpg"  alt="Project: Smooth Smoothies">
+			<img src="assets/img/intro-bootstrap-practical/bambam-700x450.jpg"  alt="Project: Smooth Smoothies" style="margin-bottom:12px">
+			<a href="https://2n2l.com/it4women/exercises/assets/img/intro-bootstrap-practical/bambam-700x450.jpg" target="_blank">Link</a>
 		</div>
 		<div class="item-3">
-			<img src="assets/img/intro-bootstrap-practical/bambam-1200x300.jpg"  alt="Project: Smooth Smoothies">
+			<img src="assets/img/intro-bootstrap-practical/bambam-1200x300.jpg"  alt="Project: Smooth Smoothies" style="margin-bottom:12px">
+			<a href="https://2n2l.com/it4women/exercises/assets/img/intro-bootstrap-practical/bambam-1200x300.jpg" target="_blank">Link</a>
 		</div>
 	</div><!-- End parent flexbox container -->
-
+	<p>&nbsp;</p>
 	<p>Your folder structure should now look as shown below.</p>
 	<img src="assets/img/intro-bootstrap-practical/file-explorer-pics.png" alt="Introduction to HTML"></li>
 
@@ -168,7 +171,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<span class="inside-ol">&nbsp;</span>
 		<a href="bootstrap-custom.css" target="-blank">bootstrap-custom.css</a></li>
 
-		<li>Right-click on the file, choose <b>Save Page As</b> from the context menu, and save the stylesheet in your <b>bootstrap/assets/css</b> sub-folder.</li>
+		<li>Right-click on the file, choose <b>Save Page As</b> from the context menu, and save the stylesheet in your <b>bootstrap/assets/css</b> sub-folder.
+		<span class="inside-ol">&nbsp;</span>
+		Ensure the <b>Save as type:</b> dropdown list is set to the correct file type.
+		<img src="assets/img/intro-bootstrap-practical/bootstrap-custom-css.png" alt="Working with Internal Hyperlinks" ></li>
 
 	</ol>
 
@@ -316,11 +322,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<p><a href="final-bootstrap-practical/bootstrap-practical-layouts-3.html" target="_blank">Bootstrap page with images</a>.</p>
 
+</section>
+
+<section id="further-resources" class="wrapper-content">
+
+	<div class="box-toc">
+		<h2>Further resources</h2>
+		 <p><a href="https://blog.teamtreehouse.com/white-space-in-web-design-what-it-is-and-why-you-should-use-it" target="_blank" rel="noopener"  class="further-title">Whitespace in Web Design: What It Is and Why You Should Use It</a></p>
+
+		 <p><a href="https://getflywheel.com/layout/effective-use-white-space-web-design/" target="_blank" rel="noopener"  class="further-title">A guide to effective use of white space in web design</a></p>
+
+		 <p><a href="https://www.justinmind.com/blog/white-space-design/" target="_blank" rel="noopener"  class="further-title">White space design: 20 striking examples and best practices</a></p>
+
+		 <p><a href="https://blog.hubspot.com/marketing/whitespace-web-design" target="_blank" rel="noopener"  class="further-title">What Is Whitespace? 9 Websites to Inspire Your Web Design</a></p>
+
+		 <p><a href="https://www.crazyegg.com/blog/white-space-website-design/" target="_blank" rel="noopener"  class="further-title">White-Space at Work: Why Less is More in Your Website Design</a></p>
+
+		 <p><a href="https://usabilitygeek.com/white-spaces-improving-usability-web-designs/" target="_blank" rel="noopener"  class="further-title">White Space - A perfect Option For Improving Usability In Web Designs</a></p>
+
+</section>
+
+<section id="further-resources" class="wrapper-content">
+	<p><br>Return to <a href="../index.html">Contents</a>.</p>
 
 
-
-	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
-
+</section>
 
 
 </section>
