--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -188,7 +188,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<h2>Linking to the custom CSS file</h2>
 	
-	<p>Your next task is to add the custom stylrsheet to your web page.</p>
+	<p>Your next task is to add the custom stylesheet to your web page.</p>
 	
 	<ol>
 		<li>Copy the following line stylesheet link
@@ -222,7 +222,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<h2>Adding background colours to grid columns</h2>
 	
-	<p>In additoon to styles that increase the spacing around the Bootstrap grid elements, the <b>bootstrap/assets/css</b> stylesheet also includes some sample background colours to work with.</p>
+	<p>In addition to styles that increase the spacing around the Bootstrap grid elements, the <b>bootstrap/assets/css</b> stylesheet also includes some sample background colours to work with.</p>
 
 	<img src="assets/img/intro-bootstrap-practical/css-some-colors.png" alt="Introduction to HTML">
 
