--- a/it4women/index.html
+++ b/it4women/index.html
@@ -350,9 +350,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/hero-blocks-one.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
+
 		<div class="item-3">
-			<p>&nbsp;</p>
+			<a href="exercises/hero-blocks-two.html">
+				<img src="assets/img/toc-hero-two.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/hero-blocks-two.html">Hero Blocks with Images</a></h3>
+			<p>Designing a range of hero blocks with various background image options including tinted overlays.</p>
+			<a class="btn-solid btn-rounded" href="exercises/hero-blocks-two.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
+
 
 		<div class="item-3">
 			<p>&nbsp;</p>
