--- a/it4women/exercises/intro-bootstrap-grid.html
+++ b/it4women/exercises/intro-bootstrap-grid.html
@@ -55,8 +55,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Create and use responsive one, two, three and four-column grids with Bootstrap.</li>
 	</ul>
 
+	<p>You can view a finished version of the Bootstrap grid layout web page you will create in this Tutorial by clicking the link below. The finished web page will open in a new tab of your web browser.</p>
+
+	<a href="final-bootstrap-grid/bootstrap-grid-4-col.html" target="_blank"><img src="assets/img/intro-bootstrap-grid/flex-cols-after-2.png" alt="Sample image" style="max-width: 500px"></a>
+	<a href="final-bootstrap-grid/bootstrap-grid-4-col.html" class="link-exercise" target="_blank">bootstrap-grid.html</a>
+
+
 
 </section>
+
+
+<section id="box-about" class="wrapper-content">
+<h2>About the Bootstrap grid system</h2>
+	<p>When designing web pages, it is sometimes enough to arrange or layout content in a single column that stretches across the full width of the screen.</p>
+
+	<p>Such <i>single-column</i> layouts are typically used for headings and short blocks of text. See the examples below.</p>
+	<img src="assets/img/intro-bootstrap-grid/sample-single.png" alt="Sample image" style="max-width: 700px">
+
+	<p>More commonly, you will want to layout web page content in a <i>grid</i> of two, three or four columns. You can see some examples below.</p>
+	<img src="assets/img/intro-bootstrap-grid/sample-multi.png" alt="Sample image" style="max-width: 700px">
+
+	<p>Bootstrap offers a built-in grid system that makes it easy to create such <i>multi-column</i> web page layouts.</p>.
+</section>
+
 
 
 <section id="box-about" class="wrapper-content">
@@ -106,9 +127,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<p>Boostrap will adjust this extra spacing responsively according to the wide of the screen.</p>
 
-	<p>Without the need to add any further layout tags to a web page or extra classes to a stylesheet, the Bootstrap <span class="syn">container</span> provides a convenient way of creating single-column layouts on web pages.</p>
+	<ul>
+		<li>Without the need to add any further layout tags to a web page or extra classes to a stylesheet, the Bootstrap <span class="syn">container</span> provides a convenient way of creating single-column layouts on web pages.</li>
 
-	<p>While the <span class="syn">container</span> class takes care of content layout or 'positioning', you will, of course, still need to add further CSS classes in the your own stylesheet to set fonts and colours.</p>
+		<li>While the <span class="syn">container</span> class takes care of content layout or 'positioning', you will, of course, still need to add further CSS classes in the your own stylesheet to set fonts and colours.</li>
+	</ul>
 
 </section>
 
@@ -329,17 +352,75 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<p><a href="final-bootstrap-grid/bootstrap-grid-4-col.html" target="_blank">Bootstrap one, two, three and four-column web page</a>.</p>
 
+</section>
+
+<section id="upload-github" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/bootstrap-grid.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
 
 
+<section id="further-resources" class="wrapper-content">
+
+	<div class="box-toc">
+		<h2>Further resources</h2>
+
+		<p><a href="https://www.freecodecamp.org/news/learn-the-bootstrap-4-grid-system-in-10-minutes-e83bfae115da/"  target="_blank" rel="noopener"  class="further-title">Learn the Bootstrap 4 Grid System in 10 Minutes</a>
+		<br>From <a href="https://www.freecodecamp.org/" target="_blank" rel="noopener" style="font-weight:normal">Free Code Camp</a></p>
+
+		<p><a href="https://www.youtube.com/watch?v=qmPmwdshCMw&list=RDQMlxXghG_HvUM&start_radio=1"  target="_blank" rel="noopener"  class="further-title">Video: Using the Bootstrap 4 Grid</a>
+		<br>From <a href="https://www.youtube.com/channel/UCSJbGtTlrDami-tDGPUV9-w" target="_blank" rel="noopener" style="font-weight:normal">Academind</a></p>
+
+		<p><a href="https://www.youtube.com/watch?v=E7R23erzuGg&t=1s"  target="_blank" rel="noopener"  class="further-title">Video: Bootstrap 4 Containers</a>
+		<br>From <a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg" target="_blank" rel="noopener" style="font-weight:normal">The Net Ninja YouTube Channel</a></p>
+
+		<p><a href="https://www.youtube.com/watch?v=CGpWqSIjCbQ&t=252s"  target="_blank" rel="noopener"  class="further-title">Video: Bootstrap 4 Grid Basics</a>
+		<br>From <a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg" target="_blank" rel="noopener" style="font-weight:normal">The Net Ninja YouTube Channel</a></p>
+
+	</div>
 
 	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
 
 	<p>&nbsp;</p>
+</section>
 
 
 
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+
+
 <p>&nbsp;</p>
 
 <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
