--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -324,21 +324,69 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
+
+<section id="upload-github" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/bootstrap-practical-layouts.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
+
+
 <section id="further-resources" class="wrapper-content">
 
 	<div class="box-toc">
 		<h2>Further resources</h2>
-		 <p><a href="https://blog.teamtreehouse.com/white-space-in-web-design-what-it-is-and-why-you-should-use-it" target="_blank" rel="noopener"  class="further-title">Whitespace in Web Design: What It Is and Why You Should Use It</a></p>
+		 <p><a href="https://blog.teamtreehouse.com/white-space-in-web-design-what-it-is-and-why-you-should-use-it" target="_blank" rel="noopener"  class="further-title">Whitespace in Web Design: What It Is and Why You Should Use It</a>
+		 <br>From Gisele Muller on <a href="https://blog.teamtreehouse.com/" target="_blank" rel="noopener" style="font-weight:normal">Treehouse</a>.</p>
 
-		 <p><a href="https://getflywheel.com/layout/effective-use-white-space-web-design/" target="_blank" rel="noopener"  class="further-title">A guide to effective use of white space in web design</a></p>
+		 <p><a href="https://getflywheel.com/layout/effective-use-white-space-web-design/" target="_blank" rel="noopener"  class="further-title">A Guide to Effective Use of White Space in Web Design</a>
+		 <br>From <a href="https://getflywheel.com/layout/author/joanneamos/" target="_blank" rel="noopener" style="font-weight:normal">Joanne Amos</a> on <a href="https://getflywheel.com" target="_blank" rel="noopener" style="font-weight:normal">Flywheel</a>.</p>
 
-		 <p><a href="https://www.justinmind.com/blog/white-space-design/" target="_blank" rel="noopener"  class="further-title">White space design: 20 striking examples and best practices</a></p>
+		 <p><a href="https://www.justinmind.com/blog/white-space-design/" target="_blank" rel="noopener"  class="further-title">White Space Design: 20 Striking Examples and Best Practices</a>
+		 <br>From <a href="https://www.justinmind.com/blog/author/joe-downs/" target="_blank" rel="noopener" style="font-weight:normal">Josesp Downes</a> on <a href="https://www.justinmind.com/" target="_blank" rel="noopener" style="font-weight:normal">Just in Mind</a>.</p>
 
-		 <p><a href="https://blog.hubspot.com/marketing/whitespace-web-design" target="_blank" rel="noopener"  class="further-title">What Is Whitespace? 9 Websites to Inspire Your Web Design</a></p>
+		 <p><a href="https://blog.hubspot.com/marketing/whitespace-web-design" target="_blank" rel="noopener"  class="further-title">What Is Whitespace? 9 Websites to Inspire Your Web Design</a>
+		 <br>From <a href="https://blog.hubspot.com/marketing/author/karla-cook" target="_blank" rel="noopener" style="font-weight:normal">Karla Cook</a> on <a href="https://blog.hubspot.com/marketing/" target="_blank" rel="noopener" style="font-weight:normal">HubSpot Marketing Blog</a>.</p>
+		 
+		 <p><a href="https://www.crazyegg.com/blog/white-space-website-design/" target="_blank" rel="noopener"  class="further-title">White-Space at Work: Why Less is More in Your Website Design</a>
+		 <br>From Sherice Jacob on <a href="https://www.crazyegg.com/blog/" target="_blank" rel="noopener" style="font-weight:normal">Crazyegg Blog</a>.</p>
 
-		 <p><a href="https://www.crazyegg.com/blog/white-space-website-design/" target="_blank" rel="noopener"  class="further-title">White-Space at Work: Why Less is More in Your Website Design</a></p>
+		 <p><a href="https://usabilitygeek.com/white-spaces-improving-usability-web-designs/" target="_blank" rel="noopener"  class="further-title">White Space - A Perfect Option For Improving Usability In Web Designs</a>
+		 <br>From Isabella Morris on <a href="https://usabilitygeek.com/" target="_blank" rel="noopener" style="font-weight:normal">Usability Geek</a>.</p>
 
-		 <p><a href="https://usabilitygeek.com/white-spaces-improving-usability-web-designs/" target="_blank" rel="noopener"  class="further-title">White Space - A perfect Option For Improving Usability In Web Designs</a></p>
 
 </section>
 
