--- a/it4women/exercises/intro-bootstrap.html
+++ b/it4women/exercises/intro-bootstrap.html
@@ -52,13 +52,40 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Learning Goals</h2>
 	<p>At the end of this Tutorial you will be able to:</p>
 	<ul>
-		<li>Create a basic Bootstrap web page.</li>
+		<li>Transform a standard HTML web page into a Bootstrap-enabled web page.</li>
 	</ul>
 
+	<p>You can view a finished version of the basic Bootstrap web page you will create in this Tutorial by clicking the link below. The finished web page will open in a new tab of your web browser.</p>
 
+	<div class="four-samples">
+		<div>
+			<a href="final-bootstrap-intro/bootstrap.html" target="_blank"><img src="assets/img/intro-bootstrap/bootstrap-browser.png" alt="Sample image"></a>
+			<a href="final-bootstrap-intro/bootstrap.html" class="link-exercise"  target="_blank">bootstrap.html</a>
+		</div>
+	</div>
 
 
 </section>
+
+<section id="box-about" class="wrapper-content">
+
+	<h2>About Bootstrap</h2>
+
+	<p>Bootstrap is a free framework that enables web designers to build web pages more quickly and easily. The current version of Bootstrap is  <a href="https://getbootstrap.com/docs/4.5/getting-started/introduction/">Bootstrap 4.5</a>. A newer version, Bootstrap 5, is due for release later in 2021.</p>
+
+	<div class="four-samples">
+		<div>
+			<a href="https://getbootstrap.com/" target="_blank"><img src="assets/img/intro-bootstrap/getbootstrap.png" alt="Sample image"></a>
+			<a href="https://getbootstrap.com/" class="link-exercise"  target="_blank">Bootstrap Official Website</a>
+		</div>
+	</div>
+
+	<p>Bootstrap offers a wide range of easy-to-use user interface components for working with common web page elements such as typography, forms, buttons and navigation menus.</p>
+
+</p>
+
+</section>
+
 
 
 <section id="box-about" class="wrapper-content">
@@ -254,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p><a target="_blank" href="final-bootstrap-intro/bootstrap.html">bootstrap.html</a></p>
 
-	<p>Below you can see where your basic <b>bootstrap.hml</b> file is stored within the folder structure on your computer. </p>
+	<p>Below you can see where your basic <b>bootstrap.html</b> file is stored within the folder structure on your computer.</p>
 	<img src="assets/img/intro-bootstrap/file-explorer-full-2.png" alt="Introduction to HTML">
 
 
@@ -265,17 +292,59 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
+<section id="upload-github" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
 
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/bootstrap.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
 
 <section id="further-resources" class="wrapper-content">
 
 	<div class="box-toc">
 		<h2>Further resources</h2>
-		<p><a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" target="_blank" rel="noopener"  class="further-title">Introduction: Getting started with Bootstrap 4.</a></p>
+		<p><a href="https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp" target="_blank" rel="noopener"  class="further-title">Bootstrap 4: Get Started</a>
+		<br>From <a href="https://www.w3schools.com/" target="_blank" rel="noopener" style="font-weight:normal">From W3schools</a></p>
+		
+		<p><a href="https://www.youtube.com/watch?v=5GcQtLDGXy8"  target="_blank" rel="noopener"  class="further-title">Video: Bootstrap Beginner Crash Course</a>
+		<br>From <a href="https://www.youtube.com/channel/UC29ju8bIPH5as8OGnQzwJyA" target="_blank" rel="noopener" style="font-weight:normal">Traversy Media YouTube Channel</a></p>
 
-		<p><a href="https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp" target="_blank" rel="noopener"  class="further-title">Bootstrap 4: Get Started</a></p>
+		<p><a href="https://scrimba.com/learn/bootstrap4" target="_blank" rel="noopener"  class="further-title">Learn Bootstrap 4 for free through ten interactive screencasts</a>
+		<br>From <a href="https://scrimba.com/" target="_blank" rel="noopener" style="font-weight:normal">Scrimba</a></p>
 
 	</div>
+
 	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
 
 	<p>&nbsp;</p>
