--- a/it4women/exercises/intro-bootstrap.html
+++ b/it4women/exercises/intro-bootstrap.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<h2>About Bootstrap</h2>
 
-	<p>Bootstrap is a free framework that enables web designers to build web pages more quickly and easily. The current version of Bootstrap is  <a href="https://getbootstrap.com/docs/4.5/getting-started/introduction/">Bootstrap 4.5</a>. A newer version, Bootstrap 5, is due for release later in 2021.</p>
+	<p>Bootstrap is a free framework that enables web designers to build web pages more quickly and easily. The current version of Bootstrap is  <a href="https://getbootstrap.com/docs/4.5/getting-started/introduction/"  target="_blank">Bootstrap 4.5</a>. A newer version, Bootstrap 5, is due for release later in 2021.</p>
 
 	<div class="four-samples">
 		<div>
